--- a/index.html
+++ b/index.html
@@ -1,35 +1,24 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do App</title>
-    <!-- Material Design Lite -->
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css"/>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="main.css" type="text/css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-    <!--Custom Styles-->
-    <link rel="stylesheet" href="main.css">
-
   </head>
   <body>
-    <header>
-      <h1>To-Do App</h1>
-    </header>
-
-    <main>
-      <form id="addToDoForm">
-        <div class="mdl-textfield mdl-js-textfield">
-          <label for="newToDoText" class= "mdl-textfield__label">New To-Do:</label>
-          <input type="text" class= "mdl-textfield__input" id="newToDoText">
-        </div>
-        <button type="submit" class= "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Add To-Do!</button>
-      </form>
-
-      <ul id="toDoList" class= "mdl-list">
-      </ul>
-    </main>
-
+    <h1 class="mdl-layout__header">To-Do App</h1>
+    <form class="mdl-layout__content mdl-grid" id="addToDoForm">
+      <label for="newToDoText">New To-Do:</label>
+      <input type="text" id="newToDoText">
+      <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">add</i></button>
+    </form>
+    <ul id="toDoList">
+    </ul>
     <script src="app.js"></script>
   </body>
 </html>
